# amd-vram-detection

./: CHANGELOG.md  README.md  pyproject.toml  vram.py
.github/workflows/: ci.yml
tests/: test_update_check.py
